--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
-    name: flask-daily-report
+    name: figurella-platform
     env: python
     buildCommand: ""
-    startCommand: python form_app.py
+    startCommand: gunicorn run:app
     plan: free
